--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="css/gen.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -16,14 +15,7 @@
 
     <nav class="navbar navbar-expand-sm bg-light navbar-light">
       <a class="navbar-brand" href="#">DecisionPad</a>
-      <button
-        class="navbar-toggler type=button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+     
         <ul class="navbar-nav ml-auto">
           <li class="nav item">
             <a class="nav-link" href="https://github.com/f4t1h4rsl4n"
@@ -35,5 +27,8 @@
     </nav>
 
     <div id="root"></div>
+    <script
+      type="text/javaScript"
+    ></script>
   </body>
 </html>
